--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <br><br>
 <ol>
   <li><a href="https://www.coupang.co.kr" target="_blank" title="html5 specification">html-coupang</a></li>
-  <li><a href="https://www.amazon.co.kr" target="_blank" title="html5 specification">css-amazon</a></li>
+  <li><a href="hz.html">haezuu</a></li>
   <li><a href="2.html">Javascript-front</a></li>
 </ol>
 
