--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <li><a href="https://www.coupang.co.kr" target="_blank" title="html5 specification">html-coupang</a></li>
   <li><a href="hz.html">haezuu</a></li>
   <li><a href="2.html">Javascript-front</a></li>
-  <li><a href="  https://www.instagram.com/trnvyl" target="_blank" title="html5 specification">html-TERU</a></li>
+  <li><a href="https://www.instagram.com/trnvyl/" target="_blank" title="html5 specification">html-TERU</a></li>
 </ol>
 
 
